--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
-    "react-slider": "^2.0.6"
+    "react-slider": "^2.0.6",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "eslint": "^8",
